--- a/config/database.yml
+++ b/config/database.yml
@@ -11,7 +11,10 @@ default: &default
 
 development:
   <<: *default
-  database: db/development.sqlite3
+  adapter: postgresql
+  host: localhost
+  username: charles
+  database: app-dev
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
@@ -21,7 +24,11 @@ test:
   database: db/test.sqlite3
 
 production:
-  adapter: postgresql
+  adapter: mysql
   encoding: utf8
-  database: project_production
+  reconnect: false
+  database: railswpcs 
   pool: 5
+  username: charles1024 
+  password: zlogGlbz7BGv
+  host: mysql.whatevery.co
